Stretching fixes for other images

--- a/frontend/src/styles/cardNFT.scss
+++ b/frontend/src/styles/cardNFT.scss
@@ -4,5 +4,6 @@
 
   img {
     padding: 15px;
+    object-fit: cover;
   }
 }
