--- a/frontend/src/styles/slogan.scss
+++ b/frontend/src/styles/slogan.scss
@@ -19,5 +19,6 @@
     height: auto;
     width: 100%;
     //max-width: 1120px;
+    object-fit: cover;
   }
 }
